--- a/style.css
+++ b/style.css
@@ -8,17 +8,25 @@ body {
     flex-direction: column;
 }
 
-.header {
-    background-color: #1F2937;
+.hero {
+    background-color: #1f2937;
     width: 100vw;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.header {
+    display: flex;
     justify-content: space-between;
+    width: 1000px;
 }
 
 .logo {
     font-size: 24px;
     color: #F9FAF8;
-    margin: 15px;
+    margin-top: 15px;
     margin-bottom: 85px;
 }
 
@@ -36,12 +44,11 @@ body {
 }
 
 .welcome {
-    background-color: #1F2937;
-    width: 100vw;
     display: flex;
     justify-content: center;
     gap: 15px;
     padding-bottom: 100px;
+    width: 1000px;
 }
 
 .content {
